# Group-expert-assessment

./: .gitignore  README.md  matrix.xlsx  models.py  preparations.py  pyproject.toml  start.py
content/: first_lab.py
utils/: auxiliary.py
