[tool.poetry]
name = "Gromov_first_lab"
version = "0.1.0"
description = ""
authors = ["vitnine <vitninevt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.5"
addict = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
